--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             },
             animation: {
               'float': 'float 8s ease-in-out infinite',
-              'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
+              'fade-in-up': 'fadeInUp 0.4s ease-out forwards',
+              'zoom-in': 'zoomIn 0.5s ease-out forwards',
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'gradient-x': 'gradient-x 15s ease infinite',
             },
@@ -36,6 +37,10 @@
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-15px)' },
+              },
+              zoomIn: {
+                '0%': { opacity: '0', transform: 'scale(0.95)' },
+                '100%': { opacity: '1', transform: 'scale(1)' },
               },
               fadeInUp: {
                 '0%': { opacity: '0', transform: 'translateY(20px)' },
