--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               'zoom-in': 'zoomIn 0.5s ease-out forwards',
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'gradient-x': 'gradient-x 15s ease infinite',
+              'spin-slow': 'spin 12s linear infinite',
             },
             keyframes: {
               float: {
@@ -84,9 +85,9 @@
 
       /* Hide Default Cursor on desktop */
       @media (pointer: fine) {
-        body, a, button, input, select, textarea, [role="button"] {
+        /* body, a, button, input, select, textarea, [role="button"] {
           cursor: none !important;
-        }
+        } */
       }
       
       /* Markdown Styles */
